# ultraschall-soundboard

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  Soundboard.code-workspace  Soundboard.jucer  Ultraschall Soundboard.jucer  azure-pipelines.yml  buid_win.cmd  build.cake  build.ps1  build_linux.sh  build_mac.sh  build_win.cmd  test_linux.sh  test_mac.sh  test_win.cmd
.nova/Tasks/: Debug.json  Eigene Aufgabe.json  Release.json
Assets/: add.afdesign
Builds/Android/: build.gradle  local.properties
Builds/CLion/: .ninja_deps  .ninja_log  CMakeLists.txt  Debug-Info-Standalone_Plugin.plist  Debug-Info-VST3.plist  Makefile  Release-Info-AU.plist  Release-Info-Standalone_Plugin.plist  Release-Info-VST.plist  Release-Info-VST3.plist  Soundboard.cbp  Ultraschall Soundboard.cbp  build.ninja  cmake_install.cmake  rules.ninja
Builds/Installer/: Module.wxs
Builds/Linux/: Makefile
Builds/LinuxMakefile/: Makefile
Builds/MacOSX/: Icon.icns  Info-AU.plist  Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist  Info-VST.plist  Info-VST3.plist  Info.plist
Builds/VisualStudio2013/: Soundboard.sln  Soundboard.vcxproj  Soundboard.vcxproj.filters  resources.rc
Builds/VisualStudio2017/: Soundboard.sln  Soundboard_SharedCode.vcxproj  Soundboard_SharedCode.vcxproj.filters  Soundboard_StandalonePlugin.vcxproj  Soundboard_VST.vcxproj  Soundboard_VST3.vcxproj  Ultraschall Soundboard.sln  Ultraschall Soundboard_SharedCode.vcxproj  Ultraschall Soundboard_SharedCode.vcxproj.filters  Ultraschall Soundboard_StandalonePlugin.vcxproj  Ultraschall Soundboard_VST.vcxproj  Ultraschall Soundboard_VST3.vcxproj  resources.rc
Builds/VisualStudio2019/: Soundboard.sln  Soundboard_SharedCode.vcxproj  Soundboard_SharedCode.vcxproj.filters  Soundboard_StandalonePlugin.vcxproj  Soundboard_StandalonePlugin.vcxproj.filters  Soundboard_VST3.vcxproj  Soundboard_VST3.vcxproj.filters  resources.rc
Builds/iOS/: Info-AUv3_AppExtension.plist  Info-Standalone_Plugin.plist
Design/: UserInterface.jucer
Design/JuceLibraryCode/: AppConfig.h  BinaryData.h  JuceHeader.h
Extras/: MIDI.md
Installer/: Module.wixproj
JUCE/: ChangeList.txt
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Plugin/: Soundboard-Plugin.jucer
Plugin/JuceLibraryCode/: AppConfig.h
Plugin/Source/: GridCell.cpp  GridCell.h  GridComponent.cpp  GridComponent.h  LookAndFeel.cpp  LookAndFeel.h  OscSettings.h  Player.cpp  Player.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SettingsComponent.cpp  SettingsComponent.h  TableButtonCell.cpp  TableComponent.cpp  TableComponent.h
Projects/Installer/: Installer.wixproj  License.rtf  Module.wixproj  Module.wxs  Product.wxs
Projects/Plugin/: Plugin.jucer  Soundboard-Plugin.jucer
Projects/Standalone/: Soundboard-Standalone.jucer  Standalone.jucer
Projects/Tests/: Tests.jucer
Source/: GridComponent.cpp  GridComponent.h  LookAndFeel.cpp  LookAndFeel.h  OscSettings.h  Player.cpp  Player.h  PluginEditor.cpp  PluginEditor.h  PluginGridEditor.cpp  PluginGridEditor.h  PluginProcessor.cpp  PluginProcessor.h  SamplePlayer.cpp  SamplePlayer.h  TableComponent.cpp  TableComponent.h  Utilities.h
Source/Actions/: Actions.h  ApplicationActions.h  BankActions.h  LibraryActions.h  PlayerActions.h  PlaylistActions.h
Source/Controller/: BankViewController.cpp  BankViewController.h  ClipViewController.cpp  ClipViewController.h  LibraryViewController.cpp  LibraryViewController.h  MainViewController.cpp  MainViewController.h  ViewController.cpp  ViewController.h
Source/Controllers/: BankViewController.cpp  LibraryViewController.cpp  LibraryViewController.h  MainViewController.cpp  MainViewController.h  ViewController.h
Source/Engine/: ADSR.cpp  ADSR.h  Core.cpp  Core.h  Engine.cpp  Engine.h  Envelope.cpp  Envelope.h  Identifier.h  Library.cpp  Library.h  MidiEngine.cpp  MidiEngine.h  OscEngine.cpp  OscEngine.h  Player.cpp  Player.h  Store.cpp  Store.h  adsr.cpp  adsr.h
Source/LookAndFeel/: Colors.cpp  Colors.h  Common.h  FloatingActionButton.h  Fonts.cpp  Fonts.h  IconButton.h  Icons.cpp  Icons.h  Material.h  MaterialLookAndFeel.h  Shadows.h
Source/Material/: Colors.h  Common.h  FloatingActionButton.h  Fonts.cpp  Fonts.h  IconButton.h  Icons.h  LookAndFeel.h  Material.h  Shadows.h
Source/Middleware/: LoggerMiddleware.h  Middleware.h  MidiMiddleware.cpp  OscMiddleware.cpp  OscMiddleware.h
Source/Models/: BankModel.h  ClipModel.h  Identifier.h  LibraryModel.h  PlayerModel.h  PlaylistModel.h  Utilities.h  ValueTreeObjectList.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Reducers/: ApplicationReducer.h  BankReducer.h  LibraryReducer.h  PlayerReducer.h  PlaylistReducer.h
Source/Redux/: ActionObject.h  Identifier.h  Middleware.h  Redux.h  Store.cpp  Store.h
Source/Standalone/: Main.cpp  StandaloneFilterWindow.h
Source/Store/: ActionObject.h  Identifier.h  Middleware.h  Store.h
Source/Tests/: Main.cpp
Source/Views/: AppBar.h  BankView.cpp  BankView.h  BottomBar.h  BottomBarView.cpp  BottomBarView.h  ClipRowView.cpp  ClipRowView.h  ClipView.cpp  ClipView.h  DrawingTools.cpp  DrawingTools.h  FloatingActionButton.h  LibraryItem.h  LibraryRowView.cpp  LibraryRowView.h  LibraryView.cpp  LibraryView.h  MainView.cpp  MainView.h  MaterialLookAndFeel.cpp  MaterialLookAndFeel.h  NavigationDrawer.h  NavigationDrawerDevider.h  NavigationDrawerHeaderItem.h  NavigationDrawerItem.h  PlaylistItem.h  SideNavbarItemView.cpp  SideNavbarItemView.h  SideNavbarView.cpp  SideNavbarView.h  StartupView.h  ToolbarView.cpp  ToolbarView.h
Stand-Alone/: Soundboard.jucer
Stand-Alone/JuceLibraryCode/: AppConfig.h  BinaryData.h  JuceHeader.h
Stand-Alone/Source/: Main.cpp  MainComponent.cpp  StandaloneFilterWindow.h
Standalone/: Soundboard-Standalone.jucer
Standalone/JuceLibraryCode/: AppConfig.h  JuceHeader.h
builds/linux/: Dockerfile  (+1 more)
docs/: MIDI-DE.md  MIDI.md  OSC-DE.md
extras/: Soundboard.touchosc
src/: ultraschall-soundboard.jucer
(+619 files in other folders)
